@@ -3,6 +3,7 @@
 - Rewrite platform dependable code to pure Perl
 - Windows support
 - Recourse mode support (strun)
+- Outthentic_exit function to allow immediate exit through hook
 
 0.3.17 2017-08-14
 
